template.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: ECS Cluster with Fargate and Load Balancer

Parameters:
  Environment:
    Description: Description
    Type: AWS::SSM::Parameter::Value<String>
    Default: EnvironmentBTI
  StackName:
    Description: Description
    Type: AWS::SSM::Parameter::Value<String>
    Default: StackNameBTI
  VPCId:
    Description: Description
    Type: AWS::SSM::Parameter::Value<String>
    Default: VPCIdBTI
  PublicSubnetOne:
    Description: Description
    Type: AWS::SSM::Parameter::Value<String>
    Default: PublicSubnetOneBTI
  PublicSubnetTwo:
    Description: PublicSubnetTwo
    Type: AWS::SSM::Parameter::Value<String>
    Default: PublicSubnetTwoBTI
  PrivateSubnetOne:
    Description: Description
    Type: AWS::SSM::Parameter::Value<String>
    Default: PrivateSubnetOneBTI
  PrivateSubnetTwo:
    Description: PrivateSubnetTwo
    Type: AWS::SSM::Parameter::Value<String>
    Default: PrivateSubnetTwoBTI
  ArnCertificateACM:
    Description: PublicSubnetTwo
    Type: AWS::SSM::Parameter::Value<String>
    Default: ArnCertificateACMBTI
  EcrRepositoryFastAPI:
    Description: Description
    Type: AWS::SSM::Parameter::Value<String>
    Default: EcrRepositoryFastAPIBTI

Resources:


  PrivateDnsNamespaceVpc:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: !Sub ${StackName}${Environment}PrivateDnsNamespace
      Vpc: !Ref VPCId
      Description: "Private DNS namespace for tutorial service discovery"


  EcsCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub "${StackName}${Environment}EcsCluster"


  EcsExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: AmazonECSTaskExecutionRolePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ecr:GetAuthorizationToken
                  - ecr:BatchGetImage
                  - ecr:BatchCheckLayerAvailability
                  - ecr:GetDownloadUrlForLayer
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  - s3:ListBucket
                  - s3:GetObject
                  - s3:PutObject
                  - sqs:SendMessage
                  - sqs:ReceiveMessage
                  - sqs:DeleteMessage
                  - sqs:GetQueueAttributes
                  - dynamodb:CreateTable
                  - dynamodb:PutItem
                  - dynamodb:DescribeTable
                  - dynamodb:DeleteItem
                  - dynamodb:GetItem
                  - dynamodb:Scan
                  - dynamodb:UpdateItem
                  - dynamodb:Query
                Resource: "*"

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound traffic on port 8080, 8081, 443
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "${StackName}${Environment}ALB"
      Subnets:
        - !Ref PublicSubnetOne
        - !Ref PublicSubnetTwo
      SecurityGroups:
        - !Ref SecurityGroup
      Scheme: internet-facing


  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            StatusCode: 200
            ContentType: text/plain
            MessageBody: 'OK'
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-2016-08
      Certificates:
        - CertificateArn: !Ref ArnCertificateACM
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroupFastAPI

  ####  FastAPI SERVICE CONFIGURATION

  TaskDefinitionFastAPI:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub "${StackName}${Environment}TaskFamilyFastAPI"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: "2048"
      Memory: "4096"
      ExecutionRoleArn: !GetAtt EcsExecutionRole.Arn
      TaskRoleArn: !GetAtt EcsExecutionRole.Arn
      ContainerDefinitions:
        - Name: api-fastapi
          Image: !Ref EcrRepositoryFastAPI
          Cpu: 0
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroupFastAPI
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs
          PortMappings:
            - ContainerPort: 8000
              HostPort: 8000
              Protocol: tcp
          HealthCheck:
            Command:
              - CMD-SHELL
              - "curl -f http://localhost:8000/ || exit 1"
            Interval: 60
            Timeout: 30
            Retries: 3
            StartPeriod: 30

  TargetGroupFastAPI:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${StackName}TGFastAPI"
      Port: 8000
      Protocol: HTTP
      VpcId: !Ref VPCId
      TargetType: ip
      HealthCheckPath: /
      # HealthCheckIntervalSeconds: 60  # Intervalo de 60 segundos entre comprobaciones
      # HealthCheckTimeoutSeconds: 15  # Tiempo de espera para cada comprobación de salud
      # UnhealthyThresholdCount: 3      # Número de fallos consecutivos antes de marcar como no saludable
      # HealthyThresholdCount: 5       # Número de éxitos consecutivos antes de marcar como saludable

  ListenerFastAPI:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 8000
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroupFastAPI

  PrivateDnsServiceFastAPI:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      Name: !Sub "${StackName}${Environment}FastAPIService"
      NamespaceId: !Ref PrivateDnsNamespaceVpc
      DnsConfig:
        DnsRecords:
          - Type: A
            TTL: 60
      HealthCheckCustomConfig:
        FailureThreshold: 1


  FargateServiceFastAPI:
    Type: AWS::ECS::Service
    DependsOn:
      - ListenerFastAPI
      - TargetGroupFastAPI
    Properties:
      ServiceName: !Sub "${StackName}${Environment}FastAPIService"
      Cluster: !Ref EcsCluster
      DesiredCount: 1
      TaskDefinition: !Ref TaskDefinitionFastAPI
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          Subnets:
            - !Ref PublicSubnetOne
            - !Ref PublicSubnetTwo
          SecurityGroups:
            - !Ref SecurityGroup
          AssignPublicIp: ENABLED
      ServiceRegistries:
        - RegistryArn: !GetAtt PrivateDnsServiceFastAPI.Arn
          ContainerName: api-fastapi
      LoadBalancers:
        - ContainerName: api-fastapi
          ContainerPort: 8000
          TargetGroupArn: !Ref TargetGroupFastAPI
      EnableExecuteCommand: true

  LogGroupFastAPI:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/ecs/${StackName}${Environment}EcsClusterFastAPI"
      RetentionInDays: 14
